--- a/wiki/templates/create.html
+++ b/wiki/templates/create.html
@@ -8,7 +8,7 @@
         <input type="submit" value="OK">
     </form> -->
 
-    <form action="/thanks/" method="post">
+    <form action="/thanks/" method="post"> <!--action = "/" is where screen site goes after submitting-->
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="Submit">
