--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-brand" href="{% url 'wiki-list-page' %}"><i class="fas fa-fw fa-book"></i> makewiki</a>
+      <a class="navbar-brand" href="{% url 'wiki:wiki-list-page' %}"><i class="fas fa-fw fa-book"></i> makewiki</a>
       <form class="form-inline ml-auto">
 
         {% if user.is_authenticated %}
