--- a/wiki/templates/create.html
+++ b/wiki/templates/create.html
@@ -8,9 +8,9 @@
         <input type="submit" value="OK">
     </form> -->
 
-    <form action="/thanks/" method="post"> <!--action = "/" is where screen site goes after submitting-->
+    <form method="post"> <!--action = "/" is where screen site goes after submitting-->
         {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Submit">
+        {{ form.as_p }}
+        <input type="submit" value="Create New Page">
     </form>
 {% endblock %}
